--- a/css/main.less
+++ b/css/main.less
@@ -117,15 +117,15 @@
 
 
 body{
-  font-size: 18px;
+  font-size: 16px;
   font-family: @Poppins;
   font-weight: @light;
   overflow-x: hidden;
   @media (max-width:1200px){
-    font-size: 16px;
+    font-size: 15px;
   }
   @media (max-width:575px){
-    font-size: 14px;
+    font-size: 13px;
   }
 }
 
@@ -175,15 +175,15 @@ h2, .h2{
 
 h3, .h3{
   font-weight: 600;
-  font-size: 20px;
+  font-size: 18px;
   color: #000;
   margin-bottom: 20px;
   margin-top: 20px;
   @media (max-width:767px){
-    font-size: 18px;
+    font-size: 17px;
   }
   @media (max-width:575px){
-    font-size: 16px;
+    font-size: 15px;
   }
 }
 
@@ -370,15 +370,15 @@ background: @red;
       }
       >a{
         color: #fff;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: @light;
         display: inline-block;
-        padding: 43px 25px;
+        padding: 17px 25px;
         @media (max-width:1200px){
-          padding: 25px 15px; font-size: 18px;
+          padding: 16px 15px; font-size: 17px;
         }
         @media (max-width:991px){
-          padding: 25px 10px; font-size: 16px;
+          padding: 15px 10px; font-size: 15px;
         }
         @media (max-width:767px){
           padding: 5px 0;
@@ -442,10 +442,10 @@ background: @red;
           color: #fff;
           display: inline-block;
           width: 100%;
-          font-size: 18px;  font-weight: @light;    padding: 18px 20px;
+          font-size: 16px;  font-weight: @light;    padding: 10px 20px;
           position: relative;
           @media (max-width:1200px){
-            font-size: 16px;
+            font-size: 15px;
           }
           @media (max-width:767px){
             padding: 5px 0;
@@ -491,10 +491,10 @@ background: @red;
           color: #424B5A;
           display: inline-block;
           width: 100%;
-          font-size: 18px;  font-weight: @light;    padding: 18px 20px;
+          font-size: 16px;  font-weight: @light;    padding: 10px 20px;
           position: relative;
           @media (max-width:1200px){
-            font-size: 16px;
+            font-size: 15px;
           }
           @media (max-width:767px){
             color: #fff;
@@ -565,13 +565,13 @@ background: @red;
 
     .dropdown-toggle{
       color: #fff;
-      font-size: 14px;
+      font-size: 13px;
       position: relative;
       padding-right: 18px;
       padding-left: 0;
       cursor: pointer;
       @media (max-width:1200px){
-        font-size: 12px;
+        font-size: 11px;
       }
       &:after{
         display: none;
@@ -616,7 +616,7 @@ background: @red;
             }
             span{
               color: #fff;
-              font-size: 16px;
+              font-size: 15px;
               font-weight: @light;
               .transition(@transition_default);
               &.icon{
@@ -869,10 +869,26 @@ background: @red;
   }
 
   .slider_item{
-    height: 900px;
+    height: 700px;
     background-size: cover;
     background-position: center;
     position: relative;
+
+    @media (max-width:1400px){
+      height:600px;
+    }
+    @media (max-width:1200px){
+      height: 500px;
+    }
+    @media (max-width:767px){
+      height: 400px;
+    }
+    @media (max-width:575px){
+      height: 350px;
+    }
+
+
+
     &:before{
       .b_a();
       width: 100%;
@@ -905,24 +921,6 @@ background: @red;
 
     }
 
-    @media (max-width:1800px){
-      height: 800px;
-    }
-    @media (max-width:1600px){
-      height: 700px;
-    }
-    @media (max-width:1400px){
-      height:600px;
-    }
-    @media (max-width:1200px){
-      height: 500px;
-    }
-    @media (max-width:767px){
-        height: 400px;
-    }
-    @media (max-width:575px){
-      height: 350px;
-    }
 
 
 
@@ -939,7 +937,7 @@ background: @red;
       }
       .title{
         font-weight: @bold;
-        font-size: 50px;
+        font-size: 45px;
         color: #FFFFFF;margin-top: 10px;    margin-bottom: 23px;
         @media (max-width:1200px){
           font-size: 40px;
@@ -956,16 +954,16 @@ background: @red;
         }
       }
       .desc{
-        font-size: 20px;
+        font-size: 18px;
         line-height: 36px;
         color: #FFFFFF;
         margin-bottom: 30px;
         @media (max-width:1200px){
-          font-size: 18px;
+          font-size: 16px;
           line-height: 1.3;
         }
         @media (max-width:991px){
-          font-size: 16px;
+          font-size: 14px;
         }
       }
 
@@ -981,10 +979,10 @@ background: @red;
   padding: 7px 48px;
   display: inline-block;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 16px;
   .transition(@transition_default);
   @media (max-width:767px){
-    padding: 5px 30px;font-size: 16px;
+    padding: 5px 30px;font-size: 15px;
   }
   &:hover, &:focus{
     text-decoration: none;
@@ -1074,12 +1072,18 @@ background: @red;
   }
   .slick-prev{
     left: 5px;
+    @media (min-width:1270px){
+      left: -30px;
+    }
     &:before{
       .transform(rotate(180deg));
     }
   }
   .slick-next{
     right: 3px;
+    @media (min-width:1270px){
+      right: -33px;
+    }
     @media (max-width:375px){
       right: 5px;
     }
@@ -1180,7 +1184,7 @@ background: @red;
     }
   }
   .cat_name{
-    font-size: 24px;
+    font-size: 22px;
     line-height: 29px;
     text-align: center;
     color: #FFFFFF;
@@ -1195,7 +1199,7 @@ background: @red;
 
 .section_title, .page_title{
   font-weight: @bold;
-  font-size: 50px;
+  font-size: 45px;
   color: #000000;
   position: relative;
   padding-left: 70px;
@@ -1290,7 +1294,7 @@ background: @red;
   }
   .title{
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
     color: #444A59;
     text-transform: uppercase;margin-bottom: 5px;
   }
@@ -1314,7 +1318,7 @@ background: @red;
   }
 
   .parent_category{
-    font-size: 14px;
+    font-size: 13px;
     color: #9D9EA3;
   }
 
@@ -1384,13 +1388,13 @@ iframe{
     }
     .item_title{
       font-weight: 500;
-      font-size: 22px;
+      font-size: 21px;
       line-height: 29px;
       color: #444A59;
       display: inline-block;
       margin-bottom: 5px;
       @media (max-width:767px){
-        font-size: 18px; line-height:1.3;
+        font-size: 16px; line-height:1.3;
       }
       &:hover, &:focus{
         text-decoration: none;
@@ -1419,9 +1423,9 @@ iframe{
 
 footer{
   background: #25346A;
-  padding: 80px 0 0;
+  padding: 40px 0 0;
   @media (max-width:1200px){
-    padding: 50px 0 0;
+    padding: 30px 0 0;
   }
   @media (max-width:575px){
     text-align: center;  padding: 30px 0 0;
@@ -1443,7 +1447,7 @@ footer{
         }
         a{
           color: #fff;
-          font-size: 16px;
+          font-size: 15px;
           &:hover, &:focus{
             text-decoration: none;
             color: @red;
@@ -1499,7 +1503,7 @@ footer{
     }
     p{
       font-weight: 300;
-      font-size: 14px;
+      font-size: 13px;
       color: #FFFFFF;
     }
   }
@@ -1507,7 +1511,7 @@ footer{
   .phone{
       display: inline-block;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 18px;
     color: #FFFFFF;
     position: relative;
     padding-left: 30px;
@@ -1530,7 +1534,7 @@ footer{
 
 
 .page_banner{
-  height: 540px;
+  height: 480px;
   width: 100%;
   background-position: center;
   background-size: cover;
@@ -1561,7 +1565,7 @@ footer{
     }
     .title{
       font-weight:@bold;
-      font-size: 50px;
+      font-size: 45px;
       color: #CF0F1D;
       @media (max-width:1200px){
         font-size: 40px;
@@ -1576,7 +1580,7 @@ footer{
     }
     .sub_title{
       font-weight: @bold;
-      font-size: 36px;
+      font-size: 32px;
       color: #FFFFFF;
       @media (max-width:1200px){
         font-size: 30px;
@@ -1594,7 +1598,7 @@ footer{
 
     .sale{
       font-weight: @bold;
-      font-size: 100px;
+      font-size: 90px;
       color: #CF0F1D;
       text-align: right;
       line-height: 1.2;
@@ -1715,7 +1719,7 @@ footer{
       ul{
         li{
           a{
-            font-size: 16px;
+            font-size: 15px;
             color: #000000;
             display: inline-block;
             font-weight: @regular;
@@ -1736,7 +1740,7 @@ footer{
       text-align: center;
       display: inline-block;
       font-weight: @bold;
-      font-size: 28px;
+      font-size: 26px;
       line-height: 34px;
       color: #FFFFFF;
       position: relative;
@@ -1840,7 +1844,7 @@ footer{
 
     .c_title{
       font-weight: 500;
-      font-size: 18px;
+      font-size: 16px;
       text-align: center;
       color: #444A59;    margin-bottom: 8px;
     }
@@ -1870,7 +1874,7 @@ footer{
         height: 35px;
         .flex();
         color: #DFDFDF;
-        font-size: 14px;
+        font-size: 13px;
         .j-center();
         .ai-center();
         font-weight: @regular;
@@ -1944,7 +1948,7 @@ footer{
       }
     }
     .filter_head{
-      font-size: 14px;
+      font-size: 13px;
       line-height: normal;
       color: #FFFFFF;
       border-bottom:1px solid  #DFDFDF;
@@ -1982,7 +1986,7 @@ footer{
           }
 
           +label{
-            font-size: 14px;
+            font-size: 13px;
             font-weight: @regular;
             color: #424B5A;
             position: relative;
@@ -2098,7 +2102,7 @@ footer{
   }
   .title{
     font-weight:@bold;
-    font-size: 50px;
+    font-size: 45px;
     color: #fff;
     margin-bottom: 13px;
     @media (max-width:1200px){
@@ -2112,16 +2116,13 @@ footer{
     }
   }
   .desc{
-    font-size: 20px;
+    font-size: 18px;
     line-height: 36px;
     color: #FFFFFF;
     margin-bottom: 15px;
     @media (max-width:1200px){
-      font-size: 18px;
-      line-height: 1.3;
-    }
-    @media (max-width:991px){
       font-size: 16px;
+      line-height: 1.3;
     }
     @media (max-width:767px){
       font-size: 14px;
@@ -2184,12 +2185,9 @@ footer{
 
       }
       .text{
-        font-size: 24px;
+        font-size: 22px;
         text-align: center;
         color: #FFFFFF;
-        @media (max-width:1200px){
-          font-size: 22px;
-        }
         @media (max-width:991px){
           font-size: 20px;
         }
@@ -2256,12 +2254,12 @@ footer{
       ul{
         li{
           font-weight: 500;
-          font-size: 26px;
+          font-size: 24px;
           color: #FFFFFF;
           position: relative;
           padding-left: 50px;    margin-bottom: 40px;
           @media (max-width:1200px){
-            font-size: 24px; margin-bottom: 30px;
+            margin-bottom: 30px;
           }
           @media (max-width:991px){
             font-size: 22px; margin-bottom: 20px;
@@ -2324,7 +2322,7 @@ footer{
         padding: 0;
         .transition(@transition_default);
         opacity: 0;
-        font-size: 16px;
+        font-size: 15px;
       }
       picture{
         display: inline-block;width: 100%;
@@ -2340,7 +2338,7 @@ footer{
       }
       .news_title{
         font-weight: 500;
-        font-size: 22px;
+        font-size: 20px;
         line-height: 29px;
         color: #444A59;
         @media (max-width:1200px){
@@ -2387,7 +2385,7 @@ footer{
 .news_page{
   .news_h1{
     font-weight: 500;
-    font-size: 40px;
+    font-size: 35px;
     color: #000000;
     margin-bottom: 25px;
     @media (max-width:1200px){
@@ -2402,7 +2400,7 @@ footer{
     }
   }
   .date{
-    font-size: 14px;
+    font-size: 13px;
     color: #9D9EA3;
     position: relative;    display: inline-block;    margin-bottom: 15px;
     &:before{
@@ -2438,7 +2436,7 @@ footer{
 .contact_form_block{
   .c_title{
     font-weight: 500;
-    font-size: 30px;
+    font-size: 28px;
     color: #000000;
     margin-bottom: 30px;
     @media (max-width:1200px){
@@ -2467,7 +2465,7 @@ footer{
       }
     }
     label{
-      font-size: 16px;
+      font-size: 15px;
       line-height: normal;
       color: #000000;
       font-weight: @regular;
@@ -2504,7 +2502,7 @@ footer{
   .btn_default{
     margin-top: 10px;
     @media (min-width:1200px){
-      padding: 10px 80px; font-size: 24px;
+      padding: 10px 80px; font-size: 22px;
     }
 
   }
@@ -2551,22 +2549,22 @@ footer{
 
   .form-control{
     &::-webkit-input-placeholder{
-      font-size: 14px;
+      font-size: 13px;
       line-height: normal;
       color: #9D9EA3;
     }
     &::-moz-placeholder{
-      font-size: 14px;
+      font-size: 13px;
       line-height: normal;
       color: #9D9EA3;
     }
-    &::-ms-input-placeholder{   font-size: 14px;
+    &::-ms-input-placeholder{   font-size: 13px;
       line-height: normal;
       color: #9D9EA3;}
-    &:-moz-placeholder{   font-size: 14px;
+    &:-moz-placeholder{   font-size: 13px;
       line-height: normal;
       color: #9D9EA3;}
-    &:-ms-input-placeholder{   font-size: 14px;
+    &:-ms-input-placeholder{   font-size: 13px;
       line-height: normal;
       color: #9D9EA3;}
   }
@@ -2575,7 +2573,7 @@ footer{
     color: #fff;
       text-align: center;
     font-weight: @bold;
-    font-size: 40px;
+    font-size: 35px;
     margin-bottom: 30px;
     @media (max-width:575px){
       font-size: 28px;margin-bottom: 20px;
@@ -2621,7 +2619,7 @@ footer{
   }
   .news_title{
     font-weight: 500;
-    font-size: 22px;
+    font-size: 20px;
     line-height: 29px;
     color: #444A59;
     margin-bottom: 20px;
@@ -2629,7 +2627,7 @@ footer{
   }
 
   .desc{
-    font-size: 13px;
+    font-size: 12px;
     line-height: 20px;
     color: #9D9EA3;
     margin-bottom: 15px;
@@ -2775,12 +2773,12 @@ footer{
         .h1{
           font-family: @Poppins;
           font-weight:@bold;
-          font-size: 40px;
+          font-size: 35px;
           color: #FFFFFF;
           text-transform: uppercase;
           margin-bottom: 40px;
           @media (max-width:1200px){
-            font-size: 35px;
+            font-size: 33px;
             margin-bottom: 20px;
           }
           @media (max-width:991px){
@@ -2789,7 +2787,7 @@ footer{
         }
 
         .product_code{
-          font-size: 14px;
+          font-size: 13px;
           line-height: normal;
           color: rgba(255, 255, 255, 0.7);
           margin-bottom: 30px;
@@ -2808,7 +2806,7 @@ footer{
           align-items: center;
           -webkit-align-items: center;
           color: #fff;
-          font-size: 25px;
+          font-size: 23px;
           padding-left: 45px;
           background: #00A34A;
           margin-bottom: 20px;
@@ -2816,7 +2814,7 @@ footer{
             margin-bottom: 10px;
           }
           span{
-            font-size: 14px;
+            font-size: 13px;
             .flex();
             .ai-start();
             margin-top: -7px;
@@ -2836,7 +2834,7 @@ footer{
 
 
         .desc{
-          font-size: 20px;
+          font-size: 18px;
           line-height: 45px;
           color: #FFFFFF;
           margin-bottom: 68px;
@@ -2850,7 +2848,7 @@ footer{
           .flex();
           .ai-center();
           span{
-            font-size: 16px;
+            font-size: 15px;
             line-height: normal;
             color: rgba(255, 255, 255, 0.7);
             display: inline-block;
@@ -3041,7 +3039,7 @@ footer{
     }
     .specifications_title{
       font-weight: @bold;
-      font-size: 22px;
+      font-size: 20px;
       line-height: normal;
       color: #444A59;
       margin-bottom: 10px;
@@ -3069,7 +3067,7 @@ footer{
         }
         >.row{
           > div{
-            font-size: 16px;
+            font-size: 15px;
             line-height: normal;
             color: #444A59;
             .transition(@transition_default);
